@@ -1,3 +1,6 @@
+Jun 04, 2015 - chris ---------------------------------------------------
+o Fixing compilation with --disable-remote
+
 Jun 03, 2015 - chris ---------------------------------------------------
 o Make sure that journal is correclty cleared after recovery
 
